The page shows slug of the products from the bascet

--- a/static/urls/compare.html
+++ b/static/urls/compare.html
@@ -12,6 +12,13 @@
 
 </head>
 <body>
-
+  {% if order_list %}
+    <p>Ищем следующий набор продуктов в разных магазинах:</p>
+    <ul>
+    {% for product in order_list %}
+      <li>{{ product }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
 </body>
 </html>
