--- a/static/urls/compare.html
+++ b/static/urls/compare.html
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+  <!--
   {% if order_list %}
     <p>Ищем следующий набор продуктов в разных магазинах:</p>
     <ul>
@@ -20,5 +21,27 @@
     {% endfor %}
     </ul>
   {% endif %}
+  -->
+  <ul id="product_list"></ul>
+
+<script src="http://localhost:8080/static/scripts/product_list.js" 
+  type="text/javascript">
+</script>
+<script>
+  
+  
+  let data = JSON.parse(sessionStorage.getItem("cart_list"));
+  console.log(data);
+
+  let ul  = document.getElementById('product_list');
+    for (product in data) {    
+    let li = document.createElement('li');
+    //li.setAttribute('id', `product_cart_id_${cart_list[product].id}`);
+    li.innerHTML = `${data[product].name}`;
+    ul.appendChild(li);
+    }
+  
+    
+</script>
 </body>
 </html>
