--- a/index.html
+++ b/index.html
@@ -7,16 +7,36 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> 
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey={{YANDEX_MAPS_API_KEY}}" type="text/javascript"></script>
     <script src="static/scripts/event_reverse_geocode.js" type="text/javascript"></script>
+  <!-- Bootstrap CSS (jsDelivr CDN) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
+    crossorigin="anonymous">
+  <!-- Bootstrap Bundle JS (jsDelivr CDN) -->
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
+    crossorigin="anonymous">
+  </script>
     
 </head>
 <body>
-    <p class="header">Кликните по карте, чтобы указать адрес</p>
-    <div id="map" style="width: 600px; height: 400px"></div>
-    <div id="adress_box">Ищем доставку по адресу <span id="address_confirm"></span></div>
-    блок полученный с сервера: <span id="shop-box"></span>
-    <div  id = 'markets'>
-
+  <header>
+    <div id="site_logo">
+      minimal<br>
+      delivery<br>
+      price
     </div>
+    <div id="'title_block">
+      сравнение стоимости доставки продуктов
+    </div>
+  </header>
+  <p>1. Ввыберите адрес доставки</p>
+  <div id="map" style="width: 600px; height: 400px"></div>
+  <p id="adress_box">2. Ищем магазины с доставкой по адресу 
+    <span id="address_confirm"></p></div>
+  <div  class='container-fluid' id = 'markets'>
+    
+
+  </div>
 
 
 
@@ -26,5 +46,11 @@
             responseCoords(coords);
         });
     </script>  
+  <footer>
+    <hr>
+    Сервис находится в активной разработке.<br>
+    Если вы нашли ошибку или у вас предложения по улучшению работы 
+    сервиса напишите на <a href="mailto:mintdragon@yandex.ruu">mintdragon@yandex.ru</a>
+  </footer>
 </body>
 </html>
