Changed footer layout

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </script>  
   <footer>
     <hr>
-    Сервис находится в активной разработке.<br>
-    Если вы нашли ошибку или у вас предложения по улучшению работы 
-    сервиса напишите на <a href="mailto:mintdragon@yandex.ruu">mintdragon@yandex.ru</a>
+    <p>Сервис находится в активной разработке.</p>
+    <p>Если вы нашли ошибку или у вас предложения по улучшению работы 
+    сервиса напишите на <a href="mailto:mintdragon@yandex.ruu">mintdragon@yandex.ru</a></p>
   </footer>
 </body>
 </html>
