--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       delivery<br>
       price
     </div>
-    <div id="'title_block">
+    <div id="'store_logo">
       сравнение стоимости доставки продуктов
     </div>
   </header>
