--- a/static/urls/store.html
+++ b/static/urls/store.html
@@ -120,6 +120,12 @@
       </a>
     </div>
   </div>
+  <footer>
+    <hr>
+    <p>Сервис находится в активной разработке.</p>
+    <p>Если вы нашли ошибку или у вас предложения по улучшению работы 
+    сервиса напишите на <a href="mailto:mintdragon@yandex.ruu">mintdragon@yandex.ru</a></p>
+  </footer>
   
 <script type="text/javascript" 
   src="http://localhost:8080/static/scripts/product_list.js">
