Can't to place block.store_logo in the center of the screen

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     
 </head>
 <body>
-  <header>
+  <header class=" ">
     <div id="site_logo">
       minimal<br>
       delivery<br>
       price
     </div>
-    <div id="'store_logo">
+    <div class="'store_logo">
       сравнение стоимости доставки продуктов
     </div>
   </header>
