--- a/static/urls/store.html
+++ b/static/urls/store.html
@@ -4,7 +4,7 @@
   <title>Товары, доступные в {{ market.name }}</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://localhost:8080/static/css/styles.css">
+  <link rel="stylesheet" href="https://localhost:8080/static/css/styles.css">
   <!-- Bootstrap CSS (jsDelivr CDN) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
@@ -19,7 +19,7 @@
 <body>
   <nav class="navbar sticky-top navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="http://localhost:8080">
+      <a class="navbar-brand" href="https://localhost:8080">
         <div id="site_logo">
           minimal<br>
           delivery<br>
@@ -138,7 +138,7 @@
   </footer>
   
 <script type="text/javascript" 
-  src="http://localhost:8080/static/scripts/product_list.js">
+  src="https://localhost:8080/static/scripts/product_list.js">
 </script>
 
 <script>
@@ -169,7 +169,7 @@
     }
     const request_body = slug_list.join('&');
     sessionStorage.setItem('cart_list', JSON.stringify(cart_list));
-    window.location.href = "http://localhost:8080/compare/order=" + request_body;
+    window.location.href = "https://localhost:8080/compare/order=" + request_body;
 
   }
 
