--- a/index.html
+++ b/index.html
@@ -20,14 +20,18 @@
 </head>
 <body>
   <header>
-    <div id="site_logo">
-      minimal<br>
-      delivery<br>
-      price
-    </div>
-    <div class="'store_logo">
-      сравнение стоимости доставки продуктов
-    </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <div id="site_logo">
+          minimal<br>
+          delivery<br>
+          price
+        </div>
+        <div class="'store_logo">
+          сравнение стоимости доставки продуктов
+        </div>
+      </div>
+    </nav>
   </header>
   <p>1. Ввыберите адрес доставки</p>
   <div id="map" style="width: 600px; height: 400px"></div>
