--- a/static/urls/store.html
+++ b/static/urls/store.html
@@ -26,7 +26,7 @@
           price
         </div>
       </a>
-      <img src="{{ market.retailer.appearance.logo_image }}" alt="market_logo" class="store_logo" >
+      <img src="{{ market.retailer.appearance.logo_image }}" alt="market_logo" class="store_logo img-fluid" >
       <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" 
         data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling"
         onclick="cart(); active_button_check()">
