--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" href="static\css\styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> 
-    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey={{YANDEX_MAPS_API_KEY}}" type="text/javascript"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=80f34084-8ad3-4a37-9b54-1a3e3084fdf2" type="text/javascript"></script>
     <script src="static/scripts/event_reverse_geocode.js" type="text/javascript"></script>
   <!-- Bootstrap CSS (jsDelivr CDN) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
