Added alert to check operability of the function

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <script type="text/javascript" src="./static/scripts/responseCoords.js"></script>
     <script>        
         document.getElementById("address_confirm").addEventListener("DOMSubtreeModified", function() {
+            alert('js is worked');
             responseCoords(coords);
         });
     </script>  
