--- a/app/static/urls/index.html
+++ b/app/static/urls/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Сравнение цен доставки продуктов</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="static\css\styles.css">
+    <link rel="stylesheet" href="static/css/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> 
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=80f34084-8ad3-4a37-9b54-1a3e3084fdf2" type="text/javascript"></script>
     <script src="static/scripts/event_reverse_geocode.js" type="text/javascript"></script>
@@ -44,10 +44,9 @@
 
 
 
-    <script type="text/javascript" src="./static/scripts/responseCoords.js"></script>
+    <script type="text/javascript" src="static/scripts/responseCoords.js"></script>
     <script>        
         document.getElementById("address_confirm").addEventListener("DOMSubtreeModified", function() {
-            alert('js is worked');
             responseCoords(coords);
         });
     </script>  
