--- a/app/static/urls/store.html
+++ b/app/static/urls/store.html
@@ -4,7 +4,7 @@
   <title>Товары, доступные в {{ market.name }}</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://localhost:8080/static/css/styles.css">
+  <link rel="stylesheet" href="http://localhost:80/static/css/styles.css">
   <!-- Bootstrap CSS (jsDelivr CDN) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
@@ -19,7 +19,7 @@
 <body>
   <nav class="navbar sticky-top navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="https://localhost:8080">
+      <a class="site_logo_href" href="/">
         <div id="site_logo">
           minimal<br>
           delivery<br>
@@ -34,8 +34,7 @@
       </button>
     </div>
   </nav>
-  
-  {{ market }}
+
   {% if categories %}
     <div class="accordion" id="accordionParent">
     {% for category in categories %}
@@ -138,7 +137,7 @@
   </footer>
   
 <script type="text/javascript" 
-  src="https://localhost:8080/static/scripts/product_list.js">
+  src="http://127.0.0.1/static/scripts/product_list.js">
 </script>
 
 <script>
@@ -169,7 +168,7 @@
     }
     const request_body = slug_list.join('&');
     sessionStorage.setItem('cart_list', JSON.stringify(cart_list));
-    window.location.href = "https://localhost:8080/compare/order=" + request_body;
+    window.location.href = "http://127.0.0.1/compare/order=" + request_body;
 
   }
 
@@ -178,7 +177,6 @@
     // общую цену
     let ul  = document.getElementById('shoping_cart_list');
     ul.innerHTML = '';
-    console.log(cart_list);
     for (product in cart_list) {    
     let li = document.createElement('li');
     li.setAttribute('id', `product_cart_id_${cart_list[product].id}`);
@@ -208,7 +206,6 @@
     // функция делает неактивной/активной кнопку "Сравнить цену"
     let btn = document.getElementById("compare_button");
     let total_price = document.getElementById("price");
-    console.log(cart_list.length);
     if (cart_list.length != 0) {
       btn.classList.remove('disabled');
       btn.setAttribute('aria-disabled', 'true');
